# edgeflow-energy-gateway

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
configs/: gateway.json  gateway.prod.json
configs/maps/: README.md  slave1.json
deploy/scripts/: install.sh
deploy/systemd/: edgeflow.service
docs/: ARCHITECTURE.md  CAPABILITY_CHECKLIST.md  CODE_STYLE.md  DEPLOY.md  DESIGN_DECISIONS.md  DEVICE_MODEL.md  HARDWARE_SELECTION.md  IMPLEMENTATION_STATUS.md  INTERVIEW_NOTES.md  LEARNING_PATH.md  MARKET_REQUIREMENTS.md  MODULE_DESIGN.md  PROGRESS.md  PROJECT_SPEC.md  RESUME_SNIPPETS.md  ROADMAP.md  RUNTIME_FLOW.md  SOAK_TEST_RECORD.md  TEST_PLAN.md  TROUBLESHOOTING.md  后续规划.md  学习路径.md  实现状态.md  开发指南.md  故障排查.md  文档索引.md  架构与设计.md  运行时数据流.md
src/: main.c
src/cli/: main.c
src/common/: README.md  datapoint.h  time_util.c  time_util.h
src/core/: README.md  reactor.c  reactor.h  ring.c  ring.h
src/egress/: README.md  mqtt_client.c  mqtt_client.h  mqtt_session.c  mqtt_session.h
src/ingress/: README.md  adapter.c  adapter.h  modbus_adapter.c  modbus_adapter.h  modbus_libmodbus.c  modbus_libmodbus.h  modbus_rtu.c  modbus_rtu.h  modbus_serial.c  modbus_serial.h  stub_adapter.c  stub_adapter.h
src/model/: device_model.c  device_model.h
src/platform/: README.md  config.c  config.h  heartbeat.c  heartbeat.h  logger.c  logger.h  metrics.c  metrics.h  storage.c  storage.h  watchdog.c  watchdog.h
src/runtime/: README.md  app.c  app.h  command_scheduler.c  command_scheduler.h  control_loop.c  control_loop.h  state_engine.c  state_engine.h
tests/: test_adapter.c  test_command_scheduler.c  test_config.c  test_control_loop.c  test_device_model.c  test_modbus_crc.c  test_ring.c  test_state_engine.c  test_storage.c
tests/tools/: mock_modbus.py
toolchain/: aarch64-linux-gnu.cmake
tools/: gen_compile_commands.py
